--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "lodash.startcase": "^4.4.0",
+    "vue": "^2.6.11",
+    "vue-csv-import": "2.3.4",
+    "vue-json-csv": "^1.2.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
